# Addis-Ababa-City

./: package-lock.json  pyproject.toml
core/project/: settings.py  urls.py
core/public/: admin.py  models.py  urls.py  views.py
core/public/migrations/: 0001_initial.py
core/static/assets/css/: bootstrap.min.css  main.css  output.css
core/templates/public/: base.html
core/templates/public/Include/: script.html
core/templates/public/Include/header/: head.html
core/templates/public/pages/: index-3.html
